@@ -26,3 +26,10 @@ See <<./zip.adoc#zip,Zip Support>>  for more information.
 
 [[x6.1-general]]
 === General Changes
+
+
+[[x6.1-web-sockets]]
+=== Web Sockets Changes
+
+A `ClientWebSocketContainer` can now be configured with a predefined `URI` instead of a combination of `uriTemplate` and `uriVariables`.
+See <<./web-sockets.adoc#web-socket-overview, WebSocket Overview>> for more information.
